--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,5 @@
 @import "css/main/body.css";
 @import "css/main/top-bar.css";
+@import "css/main/product.css";
+@import "css/main/add.css";
+@import "css/main/footer.css";
