--- a/src/css/main/body.css
+++ b/src/css/main/body.css
@@ -1,37 +1,6 @@
-.product-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-}
-.product {
-    margin: 23px;
-    width: 25%;
-    height: 200px;
-    background-color: rgb(122, 122, 129);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-.product img {
-    width: 80%;
-    height: 80%;
-    background-color: rgb(122, 122, 129);
-}
-.product-data {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 25%;
-    background-color: black;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.product-data p {
-    color: aliceblue;
-}
-.product:hover {
-    cursor: pointer;
-    transform: scale(1.05);
+body {
+    padding: 0%;
+    margin: 0%;
+    background-color: #e2ecdc;
 }
   
