--- a/src/css/main/product.css
+++ b/src/css/main/product.css
@@ -11,6 +11,7 @@
     border-top-left-radius: 10px;
     border-radius: 10px;
     box-shadow: 0 3px 10px 1px rgb(0 0 0 / 30%);
+    text-decoration: none;
 }
 .product span {
     padding-top: 2px;
