--- a/src/css/main/top-bar.css
+++ b/src/css/main/top-bar.css
@@ -1,24 +1,37 @@
+.top-bar-container {
+    background-color: #2E4F66;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .top-bar {
     display: flex;
-    justify-content: right;
+    justify-content: left;
     gap: 3px;
     align-items: flex-start;
     flex-flow: row wrap;
     background-color: #2E4F66;
-    width: 100%;
-    height: 60px;
-
-}
-.roots {
-    width: 200px;
-    height: 25px;
-    background-color: #777DA7;
-    color: black;
-    display: flex;
-    text-align: justify;
+    width: 99%;
+    height: 85px;
     align-content: center;
     align-items: center;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 5px;
+    text-align: center;
+    cursor: default;
+    border: 1px solid #e2ecdc;
+    border-radius: 6px;
+    box-shadow: 0 3px 10px 1px rgb(0 0 0 / 30%);
+}
+.top-bar span {
+    margin-left: 3px;
+    color: #e2ecdc;
+    font-size: 25px;
+}
+.top-bar p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    margin-left: 10px;
+    font-style: italic;
+    color: #e2ecdc;
 }
